[project]
name = "hatch-demo-yt"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Saikat Karmakar", email = "abcd@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rich"
]

[project.urls]
Documentation = "https://gitlab.com/Saikat Karmakar/hatch-demo-yt#readme"
Issues = "https://gitlab.com/Saikat Karmakar/hatch-demo-yt/issues"
Source = "https://gitlab.com/Saikat Karmakar/hatch-demo-yt"

[tool.hatch.version]
path = "src/hatch_demo_yt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hatch_demo_yt tests}"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"