[project]
name = "hatch-demo-yt"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Saikat Karmakar", email = "abcd@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rich"
]

[project.urls]
Documentation = "https://gitlab.com/Saikat Karmakar/hatch-demo-yt#readme"
Issues = "https://gitlab.com/Saikat Karmakar/hatch-demo-yt/issues"
Source = "https://gitlab.com/Saikat Karmakar/hatch-demo-yt"

[project.scripts]
yt_hello = "hatch_demo_yt.main:print_fn"

[tool.hatch.version]
path = "src/hatch_demo_yt/__about__.py"


[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8001"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]
feature = ["foo", "bar"]



[tool.hatch.envs.test.scripts]
test = "pytest"

[[tool.hatch.envs.test.matrix]]
tool = ["uv", "pip"]

[tool.hatch.envs.test.overrides]
matrix.feature.platforms = [
  { value = "linux"},
  { value = "windows"},
  { value = "macos"},
]

matrix.tool.installer = { value = "{matrix:tool}" }
matrix.tool.scripts = [
  { key = "pip", value = "{env:HATCH_UV} pip {args}", if = ["uv"] },
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hatch_demo_yt tests}"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

